@@ -1,3 +1,7 @@
+2010-01-03  Torbjorn Granlund  <tege@gmplib.org>
+
+	* tests/mpn/t-div.c: Rewrite operand generation code.
+
 2010-01-02  Torbjorn Granlund  <tege@gmplib.org>
 
 	* gmp-impl.h (MUL_TO_MULMOD_BNM1_FOR_2NXN_THRESHOLD): Default to
